--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761923.md#1" target="_blank">12月财新制造业PMI降至51.5 为3个月低位</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761923.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/03/1403012127111528-150x120.jpg" align ="left"></a>财新/Markit今天（1月2日）联合公布，12月中国制造业采购经理人指数(PMI)降至51.5，小幅下滑0.3%，为9月以来最低，其预期是 51.6，而前值为 51.8。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761505.md#1" target="_blank">【拍案惊奇】元旦百万游行被腰斩 港警用航拍机</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e5f247f8707d13_ttl7dayRGj_tn0101-11-150x120.jpg" align ="left"></a>香港的民阵元旦大游行已经结束。因为爆发冲突，元旦的大游行被香港警方中途叫停，但是民阵也录得超过103万人上街的数字，如果不被叫停，相信数字会更多，就算现在的也是超过了6月9日的人数。警方的数字是在维园出发和等候的人加起来一共是6万多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761801.md#1" target="_blank">大陆17家上市公司控制人被抓 殃及百万投资者</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761801.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1601110417331459-150x120.jpg" align ="left"></a>2019年，大陆有17家上市公司的18个实际控制人被抓，被抓的罪名从欺诈、操纵证券市场、猥亵到杀人等五花八门。这些控制人被抓造成公司市值蒸发逾900亿元（人民币，下同），逾百万投资人受股价下跌连累遭殃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751710.md#1" target="_blank">【2019盘点】六大案 透视美中医疗领域新战场</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751710.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/NIH_Clinical_Research_Center_aerial-600x400-150x120.jpg" align ="left"></a>美中贸易战起因之一是中共频繁盗窃美国知识产权，川普（特朗普）政府也一直在打击中共利用各种手段获取美国知识产权的行为。仅在医疗领域，2019年就至少有10名研究人员因和中共有联系被开除，或被迫离职。该领域成为美中贸易战中的一个新战场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1" target="_blank">红歌代替儿歌 大陆幼童也要宣示效忠</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/kindergarten-150x120.jpg" align ="left"></a>儿歌变“红歌”，中国大陆幼稚园被强制要求幼童宣誓效忠中共及国家领导人，而红色教育成为必修课，有被洗脑幼童称要“拿枪去打日本佬”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761208.md#1" target="_blank">中国高速省界收费站取消首日 现大堵车</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761208.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7ce1d949e5fbace52207c716f6afa7df-150x120.jpg" align ="left"></a>中共当局取消高速公路省界（人工）收费站并网切换之后，电子收费系统反而造成各地大规模交通拥堵现象。另据车主们反馈，收费站取消后缴纳费用反而涨幅惊人，甚至令部分货车主计划卖车。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761310.md#1" target="_blank">美国专家：中国问题将成总统大选焦点</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761310.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-148238869-600x400-150x120.jpg" align ="left"></a>美国中国问题研究专家日前撰文说，在美国今年的总统大选中，寻求连任的总统川普将与民主党候选人将竞相比划、谁对中共更强硬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761112.md#1" target="_blank">川普：希望在第二阶段协议完成贸易谈判</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761112.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-11261447661-600x400-1-150x120.jpg" align ="left"></a>美中贸易战历时1年半多，2019年12月31日，美国总统川普（特朗普）表示，1月15日将签署美中第一阶段贸易协议，且第二阶段协议应该能完成整个贸易谈判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761329.md#1" target="_blank">大陆火车票抢票软件赛黄牛党 收费藏猫腻</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761329.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/12306-150x120.jpg" align ="left"></a>“到底哪款应用能帮我抢到票？”这是每年过年“回乡潮”来袭的必考题，但无论哪款软件，最终都要在12306购票系统排队，加速包只是提高了抢票成功的概率，并不能保证一定抢到票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761290.md#1" target="_blank">山西老板遗书曝光  控诉滴滴黑车垄断</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761290.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/GettyImages-463416074-1-150x120.jpg" align ="left"></a>山西“好车容易”公司老板因公司陷入困境服药轻生，他在遗书中控诉黑车泛滥，滴滴出行（下称“滴滴”）以黑车垄断，令正常牌照车辆无法进入市场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11714048.md#1" target="_blank">60国海外法轮功学员恭祝李洪志师父新年好</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11714048.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/A51G6233-600x400-1-600x400-150x120.jpg" align ="left"></a>在2020新年到来之际，60个国家和地区的法轮功学员向明慧网寄来精美的贺卡、贺词，向法轮功创始人李洪志师父献上新年祝福，并表达对师父崇高的敬意和感激之情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761187.md#1" target="_blank">穿越非洲抵美 山东维权人士万里大逃亡（上）</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/003FotoJet_meitu_1-150x120.jpg" align ="left"></a>2020年的平安夜，山东维权人士界立健历时一年来到美国。他在国内因为维权和民主活动，多次被拘留并被关进精神病院，被迫从非洲逃到美国。不想中共一路追踪，他的护照被骗，人在巴西险被绑架，上演了一场万里大逃亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761168.md#1" target="_blank">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/bkn-20200102013431208-0102_00952_001_01p-150x120.jpg" align ="left"></a>山西晋城市一条在建隧道12月30日发生坍塌，造成6人死亡，官方暂未公布原因。前一天在附近的村庄内，逾40户房屋出现大裂缝，高速路面凸起和出现裂缝。当地村民已搬离，怀疑与附近开采煤矿有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 4:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761169.md#1" target="_blank">武汉飞抵台湾航班 检疫人员登机检疫</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761169.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6045186f3f335_ttl7dayhOQ________________-150x120.jpg" align ="left"></a>湖北武汉近日爆发“不明病毒性肺炎”疫情，27宗病例中7人情况危急，疑似“萨斯”卷土重来。香港、台湾亦紧盯事态。武汉出发的航班飞抵台湾，检疫人员已经进行登机检疫工作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 4:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761021.md#1" target="_blank">展望2020大陆经济：“三驾马车”全瘫</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761021.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/AFP-construction-site-labors-150x120.jpg" align ="left"></a>新年伊始，大陆经济前景令人担忧，经济学家指中共正在自食其过去盲目刺激的恶果，用以支撑经济的“三驾马车”（投资、消费和出口）将全部失灵，很多定时炸弹一触即发。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:42 AM							</td></tr>
@@ -12,25 +24,10 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759363.md#1" target="_blank">陈破空：四大难题无解 恐压垮习近平自身</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759363.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/4052978cc3c5f162f5f11cbea205abb6-150x120.jpg" align ="left"></a>“大纪元新唐人媒体集团”12月21日举办“决战2020 时事论坛”，政论家陈破空以“四大难题无解 恐压垮习近平自身”为题，分析对中国时局的观察。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 11:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756981.md#1" target="_blank">法轮大法纽约旗队学员 新年谢师恩</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756981.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fea8631c11236ef008027ebef4e3645e-150x120.jpg" align ="left"></a>正看瑞雪纷飞，又觉春风徐来。2020年新年来临之际，“法轮大法纽约旗队”学员12月29日齐聚上州，向法轮功创始人李洪志先生恭祝新年好，并表达弟子们对师尊的敬意和感恩。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 10:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759086.md#1" target="_blank">【十字路口】反渗透法过关 3疑点曝中共心慌</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e5c581354374d7_ttl7dayuPu_20200101-____-DJY-150x120.jpg" align ="left"></a>在新年的第一天，我们要来跟大家聊聊台湾的“反渗透法”。大家知道，《反渗透法》在台湾政坛掀起激烈的朝野攻防战，中共国台办也加入战局，闹得沸沸扬扬。最后，在去年的最后一天，《反渗透法》草案在台湾立法院正式通过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 9:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757710.md#1" target="_blank">大陆30省法轮功学员祝李大师新年好</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757710.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-26-1912250417015455-150x120.jpg" align ="left"></a>2020年新年前夕，来自中国30个省、直辖市和自治区的近50个行业的法轮功学员给李洪志师父拜年，敬谢师恩，立志勇猛精进、功成圆满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 9:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759265.md#1" target="_blank">【翻墙必看】2020中共面临“波涛汹涌”</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759265.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/02/702050739581528-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.周晓辉：习发贺词 2020说新年快乐有些沉重
-2019年走过，2020年走来。在这个辞旧迎新的日子里，人们彼此见面时都毫不吝啬地送上一句“新年快乐”，希望在新的一年中顺顺利利，快快乐乐，平平安安，而最后一天晚上的狂欢也是少不了的。只是祝福终归是祝福，在2020年大陆中国，上至国家、中南海高层，下至普通百姓，真.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11750092.md#1" target="_blank">【直播回放】逾103万港人元旦大游行</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11750092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001010156271501-150x120.jpg" align ="left"></a>香港民阵再次发起元旦大游行，以“毋忘承诺 并肩同行”为主题，2020年1月1日由维多利亚公园步行至遮打道行人专用区，暂时未获警方发出不反对通知书。新唐人电视台和大纪元将进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:24 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760383.md#1" target="_blank">林郑 港警 何君尧入选“年度可耻人物”三甲</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760383.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911020617162188-150x120.jpg" align ="left"></a>新年来临之际，香港民间记者以“我们的2019年度回顾”为题发起全民投票，投票结果显示，特首林郑月娥、香港警察及立法会议员何君尧入选“年度可耻人物”三甲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760052.md#1" target="_blank">上海老妇死于维权路 女儿为母伸冤</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/S__14065688-150x120.jpg" align ="left"></a>上海一名87岁老妇因房屋遭强拆而上访，四年前在北京维权时病逝医院，如今遗体仍放置在北京天坛医院太平间。最近，老妇的女儿为替母亲伸冤，向中共最高领导人呼吁，拯救中国被践踏死亡的法律。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 4:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759427.md#1" target="_blank">中共两将军辞人大职务 被指“严重违纪”</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/02/1302272024512039-150x120.jpg" align ="left"></a>2019年最后一天，官媒披露，中共两名将军因严重“违纪”被被责令辞去中共人大代表职务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759062.md#1" target="_blank">偷带癌症研究材料出境 中国学生在美被控罪</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759062.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Beth_Israel_Deaconess_Medical_Center_East_Campus-150x120.jpg" align ="left"></a>中国学生郑凿松（Zaosong Zheng，音译）12月9日在波士顿的一个国际机场准备搭机返回北京时被捕。波士顿的联邦法官裁定，郑在袜子中藏了若干平研究样本，试图走私回中国。一法官说，郑凿松与中共政府有关系，有潜逃风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759388.md#1" target="_blank">新年前一天松原现3个“太阳” 网民热议</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759388.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/d--150x120.jpeg" align ="left"></a>新年前一天，即2019年12月31日，吉林省松原市扶余市的天上出现奇异天象，天空中现3个太阳。有人直呼“活了30年头一次见”，此事亦在微博上引发热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759400.md#1" target="_blank">2019岁末 民间记者会给港人的一封信</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908190851422188-150x120.jpg" align ="left"></a>民间记者会是香港这场反送中运动没有大台的情况下，为了制衡政府虚假的记者会，民间自发建立的将民众声音向外宣扬的平台，于2019年8月6日开始第一次的民间记者会，重申示威者的五大诉求、要求调查警方滥用权力的行为及元朗袭击事件，到12月23日“逆权运动现生机 素人工会抗强权”，民间记者会共举办了29次记者会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:21 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759287.md#1" target="_blank">新年伊始港警射催泪弹 作家邓小桦眼角中弹</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759287.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/80784582_10156806344996592_3684122109266624512_n-150x120.jpg" align ="left"></a>刚踏入2020年，香港女作家邓小桦在旺角与友人倒数庆祝新年后，在登打士街行人路上，突然被警方发射的催泪弹打中左眼眼角，受伤流血。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 11:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1" target="_blank">【直播回放】新唐人电视台2020跨年缤纷夜</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-150x120.jpg" align ="left"></a>新唐人电视台特别企划《2020跨年缤纷夜》直播节目，在2019年的最后一个夜晚，陪您盘点年度大事件，欢欢喜喜迎新年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 10:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761858.md#1" target="_blank">每日三退声明精选（2020/01/01）</a><br></h3>痛恨邪恶的共产党，历史上从没有过的邪恶和反人类的政党，满口谎言，整天喊着为人民服务，其实是人民在为它服务！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761249.md#1" target="_blank">港民新年诉求不变 坚持反暴政不会退缩</a><br></h3>刚踏入2020年第一天，逾103万香港市民大游行坚持向港府提出“五大诉求，缺一不可”的愿望。在香港维多利亚公园，参加游行的港民接受本报采访时，均表达了新的一年里，坚持和平理性争取五大诉求，反对中共暴力政权不会退缩。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761256.md#1" target="_blank">中国华融债务危机 恐引台湾30档基金爆雷</a><br></h3>位居中国（中共）四大资产管理公司之首的“华融集团”，前党委书记兼董事长赖小民2018年4月因贪污落马，该集团也接连爆出债务危机。日前有媒体披露台湾35档债券型基金踩到地雷，因配置华融公司债导致至少有27亿台币（约人民币6.3亿元）曝险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759266.md#1" target="_blank">特鲁多认为逮捕孟晚舟正确 美国力挺</a><br></h3>加拿大公民康明凯（Michael Kovrig）和斯帕沃尔（Michael Spavor）已经在中国被关押超过一年。加拿大总理特鲁多披露为这两人争取自由的努力后，遭到中方指责。美国则力挺加拿大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760571.md#1" target="_blank">学者：反渗透法照妖镜 大师链撤离台湾</a><br></h3>针对反渗透法于12月31日通过当天，被质疑是红媒平台的大师链立刻宣布撤出台湾，台湾战略模拟学会研究员何澄辉1日表示，反渗透法防御机制刚开始建立就发生效用，已经起到照妖镜功能，虽然这防御机制还不完善，但方向是对的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 11:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760324.md#1" target="_blank">爆发不明肺炎疫情 武汉海鲜批发市场休市</a><br></h3>日前，湖北武汉市华南海鲜批发市场爆发集体感染不明肺炎疫情，引起民众恐慌。今天（1月1日），华南海鲜市场宣布休市整治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759917.md#1" target="_blank">安徽省委巡视组前副组长被判刑10年半</a><br></h3>2019年12月31日，中共安徽省委第七巡视组前副组长胡洪涛犯受贿罪被判刑10年半。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759620.md#1" target="_blank">中央美院教授被举报性骚扰多名女生</a><br></h3>近日，多位中央美术学院的女学生通过自媒体爆料，她们遭到该校教授姚舜熙的长期性骚扰。但该校经过长达半年的调查，至今未作出公开回应，只是对姚进行了内部处理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:32 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759473.md#1" target="_blank">2020新年首日四川自贡现4.3级地震</a><br></h3>2020年新年首日，四川自贡发生4.3级地震，震源深度21千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
